fixed bug of overlapping shadow

--- a/tetris.css
+++ b/tetris.css
@@ -2,6 +2,10 @@
     display: flex;
     flex-direction: column;
     overflow: hidden; 
+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 .t-tablero {
